# mjlab_myosuite

./: .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_NOTES.md  ISSUE_REPORT.md  Makefile  MyoSuite_instructions.md  QUICKSTART.md  README.md  pyproject.toml  test_env.py
.github/workflows/: ci.yml  deploy-recording.yml  deploy-recordings.yml
examples/: example_task_registration.py  myosuite_example.py
notebooks/: train.ipynb
recordings/: elbow1d6m.viser  elbow_fixed.viser
scripts/: play.py  record.py  train.py
src/mjlab/scripts/: play.py  train.py
src/mjlab/tasks/: __init__.py
src/mjlab/tasks/myosuite/: __init__.py  config.py  env_factory.py  registration.py  wrapper.py
src/mjlab/tasks/myosuite/rl/: __init__.py  runner.py
src/mjlab_myosuite/: __init__.py  config.py  env_factory.py  managers.py  registration.py  viewer_helpers.py  wrapper.py
src/mjlab_myosuite/actions/: __init__.py  muscle_actuator.py
src/mjlab_myosuite/rl/: __init__.py  exporter.py  runner.py
src/mjlab_myosuite/robot/: myohand_constants.py
src/mjlab_myosuite/robot/assets/: myohand_assets_fixed.xml  myohand_die_fixed.xml
src/mjlab_myosuite/scripts/: __init__.py  play.py  train.py
src/mjlab_myosuite/tasks/: __init__.py  die_reorient_env_cfg.py  myohand_manipulation_env_cfg.py  registration.py
src/mjlab_myosuite/tasks/tracking/: __init__.py  env_factory.py  rl.py  tracking_env_cfg.py
tests/: test_gpu_acceleration.py  test_manager_based_rl_env.py  test_myosuite_integration.py  test_onnx_export.py  test_scripts.py  test_tracking.py
