[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[project]
name = "mjlab-myosuite"
version = "0.1.0"
description = "MyoSuite MyoHand Die Reorientation task for mjlab"
requires-python = ">=3.12,<3.14"
dependencies = [
    "mjlab",
    "myosuite",
    "numpy",
    "torch",
]
readme = "README.md"
authors = [
    {name = "mjlab_myosuite contributors"}
]

[project.entry-points."mjlab.tasks"]
mjlab_myosuite = "mjlab_myosuite.tasks"

[tool.ruff]
src = ["src/mjlab_myosuite"]
indent-width = 4

[tool.uv.sources]
mjlab = { git = "https://github.com/mujocolab/mjlab.git", rev = "5ea83b3" }
myosuite = { git = "https://github.com/MyoHub/myosuite.git", branch = "mjx" }

[tool.uv]
override-dependencies = [
    "mujoco>=3.4.0",
]
